# semantic_router

./: .gitignore  README.md  generate_data.py  main.py  pyproject.toml
docs/: LoRA.md  PEFT.md  Unsloth.md  llm_basics.md  pre-training_vs_fine-tuning.md  schemas_&_validation.md
notebooks/: 01_train_colab.ipynb
scripts/: audit_data.py  run_data_formatting.py
src/: __init__.py  client.py  config.py  formatting.py  generator.py  logger.py  prompts.py  schemas.py  upload_data.py  utils.py  validators.py
src/data/: __init__.py  few_shots.json  generation.py  io.py
src/infrastructure/: __init__.py  api_client.py
src/schemas/: __init__.py
